kubedefs/appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
  labels:
    app: vproapp

spec:
  replicas: 1
  selector:
    matchLabels:
      app: vproapp

  template:
    metadata:
      labels:
        app: vproapp

    spec:
      containers:
        - name: vproapp
          image: vprocontainers/vprofileapp
          imagePullPolicy: Always

          ports:
            - name: vproapp-port
              containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
