kubedefs/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels:
    app: vprodb

spec:
  replicas: 1

  selector:
    matchLabels:
      app: vprodb

  template:
    metadata:
      labels:
        app: vprodb

    spec:
      containers:
        - name: vprodb
          image: vprocontainers/vprofiledb

          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"

          ports:
            - name: vprodb-port
              containerPort: 3306

          volumeMounts:
            - mountPath: /var/lib/mysql
              name: vpro-db-data

      volumes:
        - name: vpro-db-data
          persistentVolumeClaim:
            claimName: db-pv-claim
