kubedefs/rmqdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprormq
  labels:
    app: vprormq

spec:
  replicas: 1

  selector:
    matchLabels:
      app: vprormq

  template:
    metadata:
      labels:
        app: vprormq

    spec:
      containers:
        - name: vprormq
          image: rabbitmq

          resources:
            requests:
              cpu: "300m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          ports:
            - name: rabbitmq-port
              containerPort: 5672
