kubedefs/appservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vproapp-service

spec:
  type: ClusterIP

  selector:
    app: vproapp

  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
