kubedefs/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01

spec:
  type: ClusterIP

  selector:
    app: vpromc

  ports:
    - port: 11211
      targetPort: vpromc-port
      protocol: TCP
