kubedefs/rmqservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprormq

spec:
  type: ClusterIP

  selector:
    app: vprormq

  ports:
    - port: 5672
      targetPort: rabbitmq-port
      protocol: TCP
